--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "material-ui": "^0.17.4",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-jss": "^6.1.1",
     "react-redux": "^5.0.4",
-    "redux": "^3.6.0"
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "redux-form": "^6.6.3",
+    "redux-form-material-ui": "^4.2.0"
   },
   "devDependencies": {
     "pre-commit": "^1.2.2",
