--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "reactor",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.1",
     "material-ui": "^0.17.4",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
@@ -13,7 +14,8 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
-    "redux-form-material-ui": "^4.2.0"
+    "redux-form-material-ui": "^4.2.0",
+    "redux-saga": "^0.15.0"
   },
   "devDependencies": {
     "pre-commit": "^1.2.2",
