--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-jss": "^7.0.2",
-    "react-redux": "^5.0.4",
+    "react-redux": "^5.0.6",
     "react-router-redux": "next",
     "redux": "^3.7.2",
     "redux-form": "^7.0.3",
     "redux-saga": "^0.15.6",
-    "semantic-ui-css": "^2.2.11",
-    "semantic-ui-react": "^0.71.3"
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.71.4"
   },
   "devDependencies": {
     "enzyme": "^2.8.2",
     "gh-pages": "^1.0.0",
     "pre-commit": "^1.2.2",
-    "react-scripts": "1.0.10",
+    "react-scripts": "^1.0.11",
     "react-test-renderer": "^15.5.4",
     "redux-devtools-extension": "^2.13.2",
     "redux-immutable-state-invariant": "^2.0.0",
-    "standard": "^10.0.2"
+    "standard": "^10.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
