--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "react-router-redux": "next",
     "redux": "^3.7.2",
     "redux-form": "^7.0.3",
-    "redux-saga": "^0.15.6",
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.74.2"
+    "semantic-ui-react": "^0.75.0"
   },
   "devDependencies": {
     "enzyme": "^3.1.0",
