--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
-    "react-router-redux": "next",
+    "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^3.7.2",
     "redux-form": "^7.0.3",
     "redux-saga": "^0.16.0",
