--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.17.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -20,11 +20,12 @@
     "@storybook/addon-actions": "^3.2.13",
     "@storybook/addon-centered": "^3.2.13",
     "@storybook/addon-links": "^3.2.13",
+    "@storybook/addon-storyshots": "^3.2.13",
     "@storybook/react": "^3.2.13",
     "enzyme": "^3.1.0",
     "gh-pages": "^1.0.0",
     "pre-commit": "^1.2.2",
-    "react-scripts": "^1.0.11",
+    "react-scripts": "1.0.14",
     "react-test-renderer": "^16.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-immutable-state-invariant": "^2.0.0",
@@ -33,11 +34,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "./node_modules/.bin/standard",
     "lint-fix": "./node_modules/.bin/standard --fix",
-    "precommit-msg": "echo '\nPre-commit -> Linting with Standard.js \nUse \"--no-verify\" to force commit\n' && exit 0",
+    "precommit-msg": "echo '\nPre-commit -> Linting with Standard.js -> Running test with Jest \nUse \"--no-verify\" to force commit\n' && exit 0",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "storybook": "start-storybook -p 9009 -s public",
@@ -45,7 +46,8 @@
   },
   "pre-commit": [
     "precommit-msg",
-    "lint"
+    "lint",
+    "test"
   ],
   "homepage": "https://binkpitch.github.io/reactor"
 }
