--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactor",
   "version": "1.4.0",
   "private": true,
-  "homepage": "https://binkpitch.github.io/reactor",  
+  "homepage": "https://binkpitch.github.io/reactor",
   "dependencies": {
     "axios": "^0.17.0",
     "prop-types": "^15.6.0",
@@ -25,6 +25,11 @@
     "@storybook/react": "^3.2.13",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "gh-pages": "^1.0.0",
     "pre-commit": "^1.2.2",
     "react-scripts": "1.0.15",
@@ -52,6 +57,8 @@
     "test"
   ],
   "standard": {
-    "env": ["jest"]
+    "env": [
+      "jest"
+    ]
   }
 }
