--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "semantic-ui-react": "^0.75.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^4.2.2",
+    "@commitlint/config-angular": "^4.2.1",
     "@storybook/addon-actions": "^3.2.13",
     "@storybook/addon-centered": "^3.2.13",
     "@storybook/addon-links": "^3.2.13",
@@ -33,6 +35,7 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "gh-pages": "^1.0.0",
+    "husky": "^0.14.3",
     "pre-commit": "^1.2.2",
     "react-scripts": "1.0.15",
     "react-test-renderer": "^16.0.0",
@@ -44,6 +47,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "commit": "git-cz",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
     "test": "CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "./node_modules/.bin/standard",
