--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
 node_js:
-  - "8"
+  - 8
 cache:
   yarn: true
   directories:
-    - "node_modules"
+    - node_modules
 script:
   - yarn run lint
   - yarn run test
