--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
     "extends": "standard",
-    "env": {
-        "jest"
+    "plugins": [
+        "react"
+    ],
+    "env":{
+        "jest": true
     }
 }
